# C-Event-Simulator

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/simulation/: CMakeLists.txt  simulation.cpp  simulation.h
test/: CMakeLists.txt  main.cpp
test/src/: simulator_tests.cpp
